# npzcc_android_base_build

./: .gitignore  README.md
android/: build.gradle  gradle.properties
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
android/app/src/main/java/com/example/demo/: MainActivity.kt  NativeLib.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
scripts/: app_icon_create.py  app_icon_handle.sh  build_project.sh  clean_project.sh  env_setup.sh  github_push.sh  tools_install.sh
